welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:19: error: not enough arguments for method parcoursDroite: (x: Int, y: Int)Unit.
Unspecified value parameters x, y.
   	parcoursDroite()
                      ^ZigZag:27: error: not enough arguments for method parcoursGauche: (x: Int, y: Int)Unit.
Unspecified value parameters x, y.
   	parcoursGauche()
                      ^